--- a/index.html
+++ b/index.html
@@ -2,32 +2,40 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Anik | Links</title>
-    <link rel="stylesheet" href="style.css">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Anik | Links</title>
+
+ 
+  <link rel="stylesheet" href="style.css" />
+
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-    <div class="container">
-        <h1>Kazi Abu Jafar Anik</h1>
-        
-        <div class="links">
-            <a href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">Linkedin</a>
-            <a href="https://github.com/Aj-Anik" target="_blank">Github</a>
-            <a href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
-            <a href="mailto:kaziabujafaranik@gmail.com">Email</a>
-            <a href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
-            <a href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
-        </div>
+  <div class="card">
+    <h1>Kazi Abu Jafar Anik</h1>
+    <p>CSE Student • Competitive Programmer • Developer</p>
+
+    <div class="links">
+      <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
+      <a class="link" href="https://github.com/Aj-Anik" target="_blank">GitHub</a>
+      <a class="link" href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
+      <a class="link" href="mailto:kaziabujafaranik@gmail.com">Email</a>
+      <a class="link" href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
+      <a class="link" href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
     </div>
 
-    <script src="script.js"></script>
+    <div class="footer">
+      Learning • Building • Improving
+    </div>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 
-
 </html>
-
-
