--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <div class="card">
     <h1>Kazi Abu Jafar Anik</h1>
-    <p>CSE Student • Competitive Programmer • Developer</p>
+    <p>CSE Student • Competitive Programmer </p>
 
     <div class="links">
       <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
@@ -39,3 +39,4 @@
 </body>
 
 </html>
+
