--- a/index.html
+++ b/index.html
@@ -17,26 +17,41 @@
 
 <body>
 
-  <div class="card">
-    <h1>Kazi Abu Jafar Anik</h1>
-    <p>CSE Student • Competitive Programmer </p>
+  <body>
 
-    <div class="links">
-      <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
-      <a class="link" href="https://github.com/Aj-Anik" target="_blank">GitHub</a>
-      <a class="link" href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
-      <a class="link" href="mailto:kaziabujafaranik@gmail.com">Email</a>
-      <a class="link" href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
-      <a class="link" href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
+  <div class="card profile-layout">
+
+    <!-- LEFT: profile photo -->
+    <div class="profile-left">
+      <img src="img/profile.jpg" alt="Anik">
     </div>
 
-    <div class="footer">
-      Learning • Building • Improving
+    <!-- RIGHT: your details -->
+    <div class="profile-right">
+      <h1>Kazi Abu Jafar Anik</h1>
+      <p>CSE Student • Competitive Programmer</p>
+
+      <div class="links">
+        <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
+        <a class="link" href="https://github.com/Aj-Anik" target="_blank">GitHub</a>
+        <a class="link" href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
+        <a class="link" href="mailto:kaziabujafaranik@gmail.com">Email</a>
+        <a class="link" href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
+        <a class="link" href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
+      </div>
+
+      <div class="footer">
+        Learning • Building • Improving
+      </div>
     </div>
+
   </div>
 
   <script src="script.js"></script>
 </body>
 
+</body>
+
 </html>
+
 
