--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <!-- LEFT: profile photo -->
     <div class="profile-left">
-      <img src="img/profile.jpg" alt="Anik">
+      <img src="profile.jpg" alt="Anik">
     </div>
 
     <!-- RIGHT: your details -->
@@ -53,5 +53,6 @@
 </body>
 
 </html>
+
 
 
