--- a/index.html
+++ b/index.html
@@ -6,54 +6,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Anik | Links</title>
 
- 
   <link rel="stylesheet" href="style.css" />
 
-
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fraunces:wght@400;600&family=Inter:wght@400;500&display=swap" rel="stylesheet">
 </head>
 
 <body>
 
-  <body>
+  <div class="card">
+    <div class="profile-layout">
 
-  <div class="card profile-layout">
-
- 
-    <div class="profile-left">
-      <img src="profile.jpg" alt="Anik">
-    </div>
-
-   
-    <div class="profile-right">
-      <h1>Kazi Abu Jafar Anik</h1>
-      <p>CSE Student • Competitive Programmer</p>
-
-      <div class="links">
-        <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
-        <a class="link" href="https://github.com/Aj-Anik" target="_blank">GitHub</a>
-        <a class="link" href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
-        <a class="link" href="mailto:kaziabujafaranik@gmail.com">Email</a>
-        <a class="link" href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
-        <a class="link" href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
+      <div class="profile-left">
+        <img src="profile.jpg" alt="Anik">
       </div>
 
-      <div class="footer">
-        Learning • Building • Improving
-      </div>
-    </div>
+      <div class="profile-right">
+        <h1>Kazi Abu Jafar Anik</h1>
+        <p>CSE Student • Competitive Programmer</p>
 
+        <div class="links">
+          <a class="link" href="https://www.linkedin.com/in/kaziabujafaranik" target="_blank">LinkedIn</a>
+          <a class="link" href="https://github.com/Aj-Anik" target="_blank">GitHub</a>
+          <a class="link" href="https://codeforces.com/profile/AjAnik" target="_blank">Codeforces</a>
+          <a class="link" href="mailto:kaziabujafaranik@gmail.com">Email</a>
+          <a class="link" href="https://discord.com/users/775413129881845830" target="_blank">Discord</a>
+          <a class="link" href="https://monkeytype.com/profile/AjAnik" target="_blank">Monkeytype</a>
+        </div>
+
+        <div class="footer">
+          Learning • Building • Improving
+        </div>
+      </div>
+
+    </div>
   </div>
-
-  <script src="script.js"></script>
-</body>
 
 </body>
 
 </html>
-
-
-
-
